Fix backend api for order list
